--- a/ExtensionCord.csproj
+++ b/ExtensionCord.csproj
@@ -57,9 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="index.md" />
+    <None Include="TOC.yml" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="docs\" />
+    <Content Include="docs\images\extension-cord.png" />
+    <Content Include="docs\images\extension-cord.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
