--- a/ExtensionCord.nuspec
+++ b/ExtensionCord.nuspec
@@ -6,9 +6,9 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <licenseUrl>https://johtela.github.io/ExtensionCord/License.html</licenseUrl>
+    <projectUrl>https://johtela.github.io/ExtensionCord/</projectUrl>
+    <iconUrl>https://johtela.github.io/ExtensionCord/images/extension-cord.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>First release</releaseNotes>
