--- a/ExtensionCord.csproj
+++ b/ExtensionCord.csproj
@@ -55,6 +55,7 @@
     <None Include="ExtensionCord.nuspec" />
     <None Include="index.md" />
     <None Include="License.md" />
+    <None Include="README.md" />
     <None Include="TOC.yml" />
   </ItemGroup>
   <ItemGroup />
